# bound-caustics

./: .gitignore  README.md
2d/fig09/: bound.py  dataset.py  reference.py  run_main_bottom.py  run_main_bottom_latex.py  run_main_top.py  run_main_top_latex.py  utils.py
2d/mid/: bernstein.py  bound.py  dataset.py  reference.py  run_main.py  utils.py
batch/: .numba_config.yaml  alias.py  bounder.py  formula.py  interval.py  polynomial.py  profile_run.py  reference.py  run_mesh.py  transform.py  utils.py
data/: .gitignore  slab.mtl
mts1/: .gitignore  CMakeLists.txt  README.md
mts1/include/mitsuba/render/: integrator.h
mts1/src/integrators/: CMakeLists.txt
mts1/src/integrators/path/: path_cuts_path.cpp
mts1/src/integrators/photonmapper/: sppm.cpp
mts1/src/integrators/upsmcmc/: camera_storage.cpp  camera_storage.h  growing_array.h  parsable_logger.h  path_utils.cpp  path_utils.h  paths_cache.cpp  paths_cache.h  spheres_grid.h  upsmcmc.cpp  upsmcmc.h  upsmcmc_proc.cpp  upsmcmc_proc.h  upsmcmc_result.cpp  upsmcmc_result.h  upsmcmc_sampler.cpp  upsmcmc_sampler.h  upsmcmc_stats.h
mts1/src/integrators/upsmcmc/algorithms/: ups_mcmc_worker.cpp  ups_mcmc_worker.h  ups_worker.cpp  ups_worker.h
mts1/src/integrators/upsmcmc/camera_generator/: cgen_proc.cpp  cgen_proc.h  cgen_result.h  cgen_unit.h  cworker.cpp  cworker.h
mts1/src/librender/: gatherproc.cpp  integrator.cpp  particleproc.cpp
mts1/src/samplers/: CMakeLists.txt
mts1/src/utils/: CMakeLists.txt  mbglints.cpp
mts1/src/utils/mbglints/: BSDF.h  bezout.cuh  camera.h  cuda_common.cuh  decoder.h  determinant.cuh  distr.h  encoder.h  glintbounce.h  interval.h  intervalpath.h  opt_onebounce6x6.h  path.h  polynomials.cuh  resultant-simd.h  resultant.h  resultant_bvp.h  resultant_common.h  resultant_cuda.cu  resultant_cuda.cuh  resultant_det.h  resultant_elimination.h  resultant_qz.h  resultant_uvp.h  shape.h  util.h
mts1/src/utils/mbglints/bounder/: alias.h  bounder.h  polynomial.h  polynomial4.h  reflection_bounder.h  refraction_bounder.h  refraction_bounder_2d.h  utils.h
mts1/src/utils/mbglints/tokura_dgeev_batched/: tokura_dhseqr_batched_MWB.cuh
test/fig_plane/: cmp_sample.py  draw.py  draw_cmp_sample.py  fig_plane_ref.exr  plane_mpg.xml  plane_pcp.xml  test.py
test/myfiguregen/: default_layouts.py  figuregen.py  matplot_lineplot.py  pdflatex.py  pgf_lineplot.py  readme.txt
test/myfiguregen/util/: image.py  templates.py
